--- a/mytxt.html
+++ b/mytxt.html
@@ -2,9 +2,13 @@
 <html>
 	<head>
 		<title>
+			An honest mistake
 		</title>
+		<link rel="stylesheet" href="style.css";>
 	</head>
 	<body>
+		<h3>Warhammer 40k</h3>
+		<p>Imperial Guard</p>
+		<p>71st Prosan</p>
 	</body>
-
 </html>
