--- a/mytxt1.html
+++ b/mytxt1.html
@@ -1,16 +1,18 @@
 <DOCTYPE html>
 <html>
 	<head>
+		
 		<title>
 			An honest mistake
 		</title>
 		<link rel="stylesheet" href="style.css";>
 	</head>
 	<body>
-		<a href="mytxt1.html">Click Me!</a>
+		<a href="mytxt.html">Click me!</a>
 		<h3>Warhammer 40k</h3>
 		<p>Imperial Guard</p>
-		<p>71st Prosan</p>
+		<p>71st Prosan
+		<b>Are a massive army of humans</p>
 			<img src="resert.jpg" width="200px"/>
 	</body>
 </html>
